--- a/app/src/main/res/layout/activity_human_age.xml
+++ b/app/src/main/res/layout/activity_human_age.xml
@@ -3,10 +3,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ikuchko.world_population.HumanAgeActivity">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:id="@+id/imageView"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/world_map"
+        android:scaleType="centerCrop" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="User's name is "
+        android:id="@+id/userNameTextView"
+        android:textSize="20sp"
+        android:textColor="@color/colorAccent"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="User's date of birth is "
+        android:id="@+id/userDOBTextView"
+        android:textSize="20sp"
+        android:textColor="@color/colorAccent"
+        android:layout_below="@id/userNameTextView"
+        android:layout_centerHorizontal="true"
+        />
 </RelativeLayout>
