--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,8 +25,27 @@
         android:padding="5dp"
         android:textAlignment="center"
         android:background="@color/colorIconsTransparent"
-        android:textColorHint="@color/colorPrimaryText"
-        android:textColor="@color/colorPrimary"/>
+        android:textColorHint="@color/colorDivider"
+        android:textColor="@color/colorPrimary"
+        android:gravity="center"
+        android:capitalize="words" />
+
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:inputType="date"
+        android:ems="8"
+        android:textSize="26sp"
+        android:padding="5dp"
+        android:layout_marginTop="10dp"
+        android:hint="Enter your birthday"
+        android:id="@+id/dateEditText"
+        android:layout_below="@id/nameEditText"
+        android:layout_alignLeft="@id/nameEditText"
+        android:background="@color/colorIconsTransparent"
+        android:textColorHint="@color/colorDivider"
+        android:textColor="@color/colorPrimary"
+        android:gravity="center" />
 
     <Button
         android:layout_width="wrap_content"
@@ -36,7 +55,8 @@
         android:width="200dp"
         android:layout_marginTop="20dp"
         android:id="@+id/submitButton"
-        android:layout_below="@+id/nameEditText"
+        android:layout_below="@+id/dateEditText"
         android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
