--- a/app/src/main/res/layout/country_tile.xml
+++ b/app/src/main/res/layout/country_tile.xml
@@ -6,35 +6,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorIconsTransparent">
 
-    <ImageView
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        tools:src="@drawable/ukraine"
-        android:id="@+id/flagView" />
-
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingLeft="5dp">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Ukraine"
-            android:id="@+id/countryName"
-            android:textSize="25sp"
-            android:textColor="@color/colorPrimary"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true" />
+        <ImageView
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            tools:src="@drawable/ukraine"
+            android:id="@+id/flagView" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="45897525"
-            android:id="@+id/population"
-            android:textSize="20sp"
-            android:textColor="@color/colorPrimary"
-            android:layout_below="@+id/countryName" />
-    </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Ukraine"
+                android:id="@+id/countryName"
+                android:textSize="25sp"
+                android:textColor="@color/colorPrimary"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="45897525"
+                android:id="@+id/population"
+                android:textSize="20sp"
+                android:textColor="@color/colorPrimary"
+                android:layout_below="@+id/countryName" />
+        </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
