--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/countryRecyclerView"/>
+        android:id="@+id/countryRecyclerView"
+        android:scrollIndicators="right" />
 
 
 </RelativeLayout>
