--- a/app/src/main/res/layout/country_tile.xml
+++ b/app/src/main/res/layout/country_tile.xml
@@ -32,7 +32,7 @@
                 android:id="@+id/countryName"
                 android:textSize="25sp"
                 android:layout_centerHorizontal="true"
-                android:textColor="@color/colorPrimary"/>
+                android:textColor="@color/colorSecondaryText"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -46,7 +46,7 @@
                     android:id="@+id/capitalTitle"
                     android:text="Capital: "
                     android:textSize="20sp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/colorPrimaryText"
                     android:layout_weight="0"
                     android:layout_below="@+id/countryName" />
 
@@ -57,7 +57,7 @@
                     android:id="@+id/capital"
                     android:textSize="20sp"
                     android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/colorPrimaryText"
                     android:layout_below="@id/countryName"/>
 
             </LinearLayout>
@@ -74,7 +74,7 @@
                     android:layout_weight="0"
                     android:id="@+id/populationTitle"
                     android:textSize="20sp"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/colorPrimaryText" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -83,7 +83,7 @@
                     android:id="@+id/population"
                     android:textSize="20sp"
                     android:layout_weight="1"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/colorPrimaryText" />
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
