--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#8BC34A</color>
-    <color name="colorPrimaryDark">#689F38</color>
-    <color name="colorPrimaryLight">#DCEDC8</color>
+    <color name="colorPrimary">#303018</color>
+    <color name="colorPrimaryDark">#001818</color>
+    <color name="colorPrimaryLight">#484830</color>
     <color name="colorPrimaryLightTransparent">#DCEDC8</color>
-    <color name="colorAccent">#CDDC39</color>
-    <color name="colorPrimaryText">#212121</color>
-    <color name="colorSecondaryText">#727272</color>
+    <color name="colorAccent">#786030</color>
+    <color name="colorPrimaryText">#a89060</color>
+    <color name="colorSecondaryText">#d8d8d8</color>
     <color name="colorIcons">#212121</color>
     <color name="colorIconsTransparent">#99212121</color>
     <color name="colorDivider">#B6B6B6</color>
