--- a/app/src/main/res/layout/fragment_country_detail.xml
+++ b/app/src/main/res/layout/fragment_country_detail.xml
@@ -23,7 +23,7 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="160dp"
             android:id="@+id/flagImageView"
             android:layout_marginBottom="10dp"
             tools:src="@drawable/placeholder"/>
