--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,6 +33,24 @@
     <EditText
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/passwordEditText"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:hint="Enter your password"
+        android:textSize="26sp"
+        android:padding="5dp"
+        android:textAlignment="center"
+        android:layout_below="@id/nameEditText"
+        android:background="@color/colorIconsTransparent"
+        android:textColorHint="@color/colorDivider"
+        android:textColor="@color/colorPrimary"
+        android:gravity="center" />
+
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
         android:inputType="date"
         android:ems="8"
         android:textSize="26sp"
@@ -40,7 +58,7 @@
         android:layout_marginTop="10dp"
         android:hint="Enter your birthday"
         android:id="@+id/dateEditText"
-        android:layout_below="@id/nameEditText"
+        android:layout_below="@id/passwordEditText"
         android:layout_alignLeft="@id/nameEditText"
         android:background="@color/colorIconsTransparent"
         android:textColorHint="@color/colorDivider"
@@ -57,6 +75,8 @@
         android:id="@+id/submitButton"
         android:layout_below="@+id/dateEditText"
         android:layout_centerHorizontal="true" />
+
+
 
 
 </RelativeLayout>
