--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,7 +5,7 @@
     tools:context=".activities.MainActivity">
 
     <item
-        android:id="@+id/signin"
+        android:id="@+id/signOption"
         android:title="@string/signin"
         app:showAsAction="always"/>
 </menu>
