--- a/app/src/main/res/layout/activity_counrty_detail.xml
+++ b/app/src/main/res/layout/activity_counrty_detail.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".activities.CounrtyDetailActivity">
 
+    <fragment
+        android:name="com.google.android.gms.maps.MapFragment"
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/abc_alert_dialog_material" />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
