import FirebaseRecyclerAdapter library

--- a/app/src/main/res/menu/country_detail_menu.xml
+++ b/app/src/main/res/menu/country_detail_menu.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:title="Share"
-        app:showAsAction="always"
+        app:showAsAction="never"
         android:id="@+id/share"
         android:icon="@drawable/ic_save_white_36dp"/>
     <item
-        android:title="Visited:"
+        android:title="Favorite:"
         app:showAsAction="always"
-        android:id="@+id/visited" />
+        android:id="@+id/favorite" />
 </menu>
