--- a/app/src/main/res/layout/fragment_country_detail.xml
+++ b/app/src/main/res/layout/fragment_country_detail.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ikuchko.world_population.activities.CountryDetailFragment">
+    tools:context=".fragments.CountryDetailFragment">
 
     <LinearLayout
         android:orientation="vertical"
