--- a/app/src/main/res/menu/country_detail_menu.xml
+++ b/app/src/main/res/menu/country_detail_menu.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:title="Share"
-        app:showAsAction="never"
+        app:showAsAction="ifRoom"
         android:id="@+id/share"
-        android:icon="@drawable/ic_save_white_36dp"/>
+        android:icon="@drawable/ic_share_white_36dp"/>
     <item
         android:title="Favorite:"
         app:showAsAction="always"
