add animation on pageView and on touch event in listView

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="colorSecondaryText">#d8d8d8</color>
     <color name="colorIcons">#212121</color>
     <color name="colorIconsTransparent">#99212121</color>
+    <color name="colorIconsTransparent70">#CC212121</color>
     <color name="colorDivider">#B6B6B6</color>
 </resources>
