--- a/app/src/main/res/layout/activity_counrty_detail.xml
+++ b/app/src/main/res/layout/activity_counrty_detail.xml
@@ -8,7 +8,8 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:background="@drawable/world_map">
 
         <android.support.v4.view.PagerTabStrip
             android:id="@+id/pagerHeader"
@@ -16,7 +17,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top"
             android:paddingBottom="4dp"
-            android:paddingTop="4dp" />
+            android:paddingTop="4dp"
+            android:textColor="@color/colorSecondaryText"/>
 
 </android.support.v4.view.ViewPager>
 
