--- a/app/src/main/res/layout/activity_wishlist.xml
+++ b/app/src/main/res/layout/activity_wishlist.xml
@@ -14,11 +14,12 @@
         android:src="@drawable/world_map"
         android:scaleType="centerCrop" />
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/wishlistRecyclerView"
-        android:scrollIndicators="right" />
+    <fragment
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:id="@+id/fragmentWishlist"
+        android:name="com.ikuchko.world_population.fragments.WishlistFragment"
+        tools:layout="@layout/fragment_wishlist"/>
 
 
 
