--- a/app/src/main/res/layout/activity_counrty_detail.xml
+++ b/app/src/main/res/layout/activity_counrty_detail.xml
@@ -5,11 +5,20 @@
     android:layout_height="match_parent"
     tools:context=".activities.CounrtyDetailActivity">
 
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:id="@+id/imageView"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/world_map"
+        android:scaleType="centerCrop" />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/world_map">
+        android:layout_height="wrap_content">
 
         <android.support.v4.view.PagerTabStrip
             android:id="@+id/pagerHeader"
