--- a/app/src/main/res/layout/activity_wishlist.xml
+++ b/app/src/main/res/layout/activity_wishlist.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.WishlistActivity">
+    tools:context=".activities.WishListActivity">
 
     <ImageView
         android:layout_width="wrap_content"
