change country recylerView item on landscape orientation

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -29,7 +29,8 @@
             android:name="com.ikuchko.world_population.fragments.CountryListFragment"
             tools:layout="@layout/fragment_country_list"/>
 
-        <View android:background="@color/colorAccent"
+        <View
+            android:background="@color/colorAccent"
             android:layout_width="2dp"
             android:layout_height="wrap_content"/>
 
