--- a/app/src/main/res/layout/country_list_item.xml
+++ b/app/src/main/res/layout/country_list_item.xml
@@ -17,6 +17,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
             tools:src="@drawable/ukraine"
             android:id="@+id/flagView" />
 
@@ -30,7 +32,7 @@
                 android:layout_height="wrap_content"
                 tools:text="Ukraine"
                 android:id="@+id/countryName"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:layout_centerHorizontal="true"
                 android:textColor="@color/colorSecondaryText"/>
 
@@ -45,7 +47,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/capitalTitle"
                     android:text="Capital: "
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:textColor="@color/colorPrimaryText"
                     android:layout_weight="0"
                     android:layout_below="@+id/countryName" />
@@ -55,7 +57,7 @@
                     android:layout_height="wrap_content"
                     tools:text="AsDA"
                     android:id="@+id/capital"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:layout_weight="1"
                     android:textColor="@color/colorPrimaryText"
                     android:layout_below="@id/countryName"/>
@@ -73,7 +75,7 @@
                     android:text="Population: "
                     android:layout_weight="0"
                     android:id="@+id/populationTitle"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:textColor="@color/colorPrimaryText" />
 
                 <TextView
@@ -81,7 +83,7 @@
                     android:layout_height="wrap_content"
                     tools:text="45897525"
                     android:id="@+id/population"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:layout_weight="1"
                     android:textColor="@color/colorPrimaryText" />
             </LinearLayout>
