--- a/app/src/main/res/layout/fragment_country_detail.xml
+++ b/app/src/main/res/layout/fragment_country_detail.xml
@@ -23,10 +23,24 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="100dp"
             android:id="@+id/flagImageView"
             android:layout_marginBottom="10dp"
             tools:src="@drawable/placeholder"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="260dp"
+            android:id="@+id/mapImage"
+            android:layout_marginBottom="10dp"
+            tools:src="@drawable/placeholder"/>
+
+        <fragment
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="260dp"
+            android:layout_height="160dp"
+            android:id="@+id/map" />
 
         <View
             android:layout_width="fill_parent"
